# solidworks-automation

./: .gitattributes  .gitignore  CLAUDE.md  CODE_AUDIT_REPORT.md  CODE_AUDIT_ROUND2_REPORT.md  CODE_FIX_REPORT.md  DEBUG_LOG.md  PR1_REVIEW_FIXES.md  plan.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
examples/: model_bracket.py  model_flashlight.py  model_meshing_gears.py  model_product_propeller.py  model_turbine_blade.py  model_u_fork.py  model_wire_bin.py  model_wireless_mouse.py  model_wireless_mouse_assembly.py  model_woven_bin.py  test_equation_involute_curve.py  test_equation_slot_profile.py  test_equation_spline_minimal.py
scripts/: build_sw_api_docs.py
solidworks_com/: __init__.py  analysis.py  app.py  assembly.py  auto_repair.py  benchmark.py  bom.py  brief.py  builders.py  com.py  constants.py  design_rules.py  drawing.py  drawing_doc.py  drawing_parser.py  errors.py  export.py  features.py  geometry.py  inspection.py  manufacturing.py  metadata.py  model.py  parameters.py  parts.py  precision.py  repair.py  sketch.py  snapshot.py  urdf.py  viewer.py
tests/: conftest.py  test_analysis.py  test_analysis_metadata.py  test_auto_repair.py  test_bom.py  test_boolean_apis.py  test_brief_repair.py  test_build_sw_api_docs.py  test_cad_ir_to_sw.py  test_cad_ir_to_sw_e2e.py  test_com_helpers.py  test_constants.py  test_design_rules.py  test_drawing_doc.py  test_drawing_parser.py  test_errors.py  test_export_benchmark.py  test_geometry.py  test_imports.py  test_inspection.py  test_manufacturing.py  test_metadata.py  test_parameters.py  test_precision.py  test_propeller_spec.py  test_pywin32_cache.py  (+8 more)
(+53 files in other folders)
